--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -11,13 +11,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/medium"
-        android:dividerHeight="1dp"/>
+        android:dividerHeight="1dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <!-- Empty view is only visible when the list has no items. -->
     <TextView
         android:id="@+id/empty_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="@dimen/medium"
         android:layout_centerInParent="true"
         android:textAppearance="?android:textAppearanceMedium"/>
 
