updated edittext view and added comments to the adaper file

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
-        android:inputType="text"
+        android:inputType="textCapWords"
         android:textAlignment="center"
         android:hint="@string/hint" />
 
